@@ -8,6 +8,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
+import uk.gov.hmcts.reform.civil.callback.CallbackException;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
 import uk.gov.hmcts.reform.civil.handler.callback.BaseCallbackHandlerTest;
@@ -32,6 +33,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.times;
@@ -256,8 +258,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
 
                 List<String> actualErrors = response.getErrors();
 
-                assertThat(actualErrors).hasSize(1);
-                assertThat(actualErrors).containsExactly("Document date cannot be in the future");
+                assertThat(actualErrors)
+                    .hasSize(1)
+                    .containsExactly("Document date cannot be in the future");
             }
 
             @Test
@@ -274,8 +277,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
 
                 List<String> actualErrors = response.getErrors();
 
-                assertThat(actualErrors).hasSize(1);
-                assertThat(actualErrors).containsExactly("Document date cannot be in the future");
+                assertThat(actualErrors)
+                    .hasSize(1)
+                    .containsExactly("Document date cannot be in the future");
             }
 
             @Test
@@ -292,8 +296,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
 
                 List<String> actualErrors = response.getErrors();
 
-                assertThat(actualErrors).hasSize(2);
-                assertThat(actualErrors).containsExactly("Document date cannot be in the future", "Document date cannot be in the future");
+                assertThat(actualErrors)
+                    .hasSize(2)
+                    .containsExactly("Document date cannot be in the future", "Document date cannot be in the future");
             }
 
             @Test
@@ -373,8 +378,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> actual = unwrapElements(updatedData.getApp1MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -391,8 +397,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getApp1MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP1_CATEGORY_ID));
             }
 
             @Test
@@ -409,8 +416,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> actual = unwrapElements(updatedData.getApp2MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -427,8 +435,8 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getApp2MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP2_CATEGORY_ID));
+                assertThat(actual).hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP2_CATEGORY_ID));
             }
 
             @Test
@@ -445,10 +453,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> app2actual = unwrapElements(updatedData.getApp2MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID));
-                assertThat(app2actual).hasSize(1);
-                assertThat(app2actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID));
+                assertThat(app2actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -466,10 +476,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 app2actual = unwrapElements(updatedData.getApp2MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(app2actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP1_CATEGORY_ID));
-                assertThat(app2actual).containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP1_CATEGORY_ID));
+                assertThat(app2actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(APP2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(APP2_CATEGORY_ID));
             }
 
             @Test
@@ -485,8 +497,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> actual = unwrapElements(updatedData.getRes1MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -503,8 +516,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getRes1MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES1_CATEGORY_ID));
             }
 
             @Test
@@ -520,8 +534,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> actual = unwrapElements(updatedData.getRes2MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -538,8 +553,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getRes2MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES2_CATEGORY_ID));
             }
 
             @Test
@@ -556,10 +572,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationNonAttendanceStatement> res2actual = unwrapElements(updatedData.getRes2MediationNonAttendanceDocs());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID));
-                assertThat(res2actual).hasSize(1);
-                assertThat(res2actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID));
+                assertThat(res2actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -577,10 +595,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 res2actual = unwrapElements(updatedData.getRes2MediationNonAttendanceDocs());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(res2actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES1_CATEGORY_ID));
-                assertThat(res2actual).containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES1_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES1_CATEGORY_ID));
+                assertThat(res2actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedMediationNonattendanceDocOne(RES2_CATEGORY_ID), getExpectedMediationNonattendanceDocTwo(RES2_CATEGORY_ID));
             }
         }
 
@@ -618,8 +638,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getApp1MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -636,8 +657,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getApp1MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
 
             }
 
@@ -654,8 +676,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getApp1MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -672,8 +695,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getApp1MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
                 verify(uploadMediationService, times(2)).uploadMediationDocumentsTaskList(any());
             }
 
@@ -690,8 +714,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getApp2MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -708,8 +733,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getApp2MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID), getExpectedReferredDocsTwo(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID), getExpectedReferredDocsTwo(APP2_CATEGORY_ID));
             }
 
             @Test
@@ -726,10 +752,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> app2actual = unwrapElements(updatedData.getApp2MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
-                assertThat(app2actual).hasSize(1);
-                assertThat(app2actual).containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID));
+                assertThat(app2actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -747,10 +775,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 app2actual = unwrapElements(updatedData.getApp2MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
-                assertThat(app2actual).hasSize(2);
-                assertThat(app2actual).containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID), getExpectedReferredDocsTwo(APP2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(APP1_CATEGORY_ID), getExpectedReferredDocsTwo(APP1_CATEGORY_ID));
+                assertThat(app2actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(APP2_CATEGORY_ID), getExpectedReferredDocsTwo(APP2_CATEGORY_ID));
 
             }
 
@@ -767,8 +797,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getRes1MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -785,8 +816,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getRes1MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
             }
 
             @Test
@@ -802,8 +834,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getRes1MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -820,8 +853,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getRes1MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
                 verify(uploadMediationService, times(2)).uploadMediationDocumentsTaskList(any());
             }
 
@@ -838,8 +872,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> actual = unwrapElements(updatedData.getRes2MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -856,8 +891,9 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 actual = unwrapElements(updatedData.getRes2MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID), getExpectedReferredDocsTwo(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID), getExpectedReferredDocsTwo(RES2_CATEGORY_ID));
             }
 
             @Test
@@ -874,10 +910,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 List<MediationDocumentsReferredInStatement> res2actual = unwrapElements(updatedData.getRes2MediationDocumentsReferred());
 
                 assertThat(updatedData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(1);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
-                assertThat(res2actual).hasSize(1);
-                assertThat(res2actual).containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID));
+                assertThat(res2actual)
+                    .hasSize(1)
+                    .containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID));
 
                 // Run event again adding second document
                 UploadMediationDocumentsForm uploadMediationDocumentsForm = buildSecondMediationNonattendanceDoc(
@@ -895,10 +933,12 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
                 res2actual = unwrapElements(updatedData.getRes2MediationDocumentsReferred());
 
                 assertThat(secondEventData.getUploadMediationDocumentsForm()).isEqualTo(EXPECTED_FORM);
-                assertThat(actual).hasSize(2);
-                assertThat(actual).containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
-                assertThat(res2actual).hasSize(2);
-                assertThat(res2actual).containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID), getExpectedReferredDocsTwo(RES2_CATEGORY_ID));
+                assertThat(actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(RES1_CATEGORY_ID), getExpectedReferredDocsTwo(RES1_CATEGORY_ID));
+                assertThat(res2actual)
+                    .hasSize(2)
+                    .containsExactly(getExpectedReferredDocsOne(RES2_CATEGORY_ID), getExpectedReferredDocsTwo(RES2_CATEGORY_ID));
             }
         }
 
@@ -913,7 +953,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getApp1MediationNonAttendanceDocs().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getApp1MediationNonAttendanceDocs().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("ClaimantOneMediationDocs");
         }
 
@@ -928,7 +968,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getApp1MediationDocumentsReferred().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getApp1MediationDocumentsReferred().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("ClaimantOneMediationDocs");
         }
 
@@ -943,7 +983,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getApp2MediationNonAttendanceDocs().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getApp2MediationNonAttendanceDocs().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("ClaimantTwoMediationDocs");
         }
 
@@ -958,7 +998,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getApp2MediationDocumentsReferred().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getApp2MediationDocumentsReferred().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("ClaimantTwoMediationDocs");
         }
 
@@ -973,7 +1013,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getRes1MediationNonAttendanceDocs().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getRes1MediationNonAttendanceDocs().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("DefendantOneMediationDocs");
         }
 
@@ -988,7 +1028,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getRes1MediationDocumentsReferred().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getRes1MediationDocumentsReferred().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("DefendantOneMediationDocs");
         }
 
@@ -1003,7 +1043,7 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getRes2MediationNonAttendanceDocs().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getRes2MediationNonAttendanceDocs().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("DefendantTwoMediationDocs");
         }
 
@@ -1018,8 +1058,28 @@ class UploadMediationDocumentsCallbackHandlerTest extends BaseCallbackHandlerTes
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
             CaseData updatedData = objectMapper.convertValue(response.getData(), CaseData.class);
             // Then
-            assertThat(updatedData.getRes2MediationDocumentsReferred().get(0).getValue().getDocument().getCategoryID())
+            assertThat(updatedData.getRes2MediationDocumentsReferred().getFirst().getValue().getDocument().getCategoryID())
                 .isEqualTo("DefendantTwoMediationDocs");
+        }
+
+        @Test
+        void shouldThrowException_whenInvalidPartyOptionForReferredDocs() {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimIssued()
+                .uploadMediationDocumentsChooseOptions("INVALID_PARTY", DOCUMENTS_REFERRED_OPTION)
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+
+            assertThrows(CallbackException.class, () -> handler.handle(params), "Invalid party option selected");
+        }
+
+        @Test
+        void shouldThrowException_whenInvalidPartyOptionForNonAttendance() {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimIssued()
+                .uploadMediationDocumentsChooseOptions("INVALID_PARTY", MEDIATION_NON_ATTENDANCE_OPTION)
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+
+            assertThrows(CallbackException.class, () -> handler.handle(params), "Invalid party option selected");
         }
 
         @Test
